--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.3"
   },
